--- a/src/default.html
+++ b/src/default.html
@@ -6,7 +6,7 @@
   <!-- build:css -->
   <link rel="stylesheet" href="{{ theme:css }}" />
   <!-- endbuild -->
-  <link rel="icon" type="image/png" href="{{ theme:img src="favicon.png" }}" />
+  <link rel="shortcut icon" type="image/ico" href="{{ theme:img src="favicon.ico" }}">
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCa3ywQ6GzCRIlFJsqT0_a1fBhaP7MoJpM">
     </script>
