--- a/src/default.html
+++ b/src/default.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="{{ theme:css }}" />
   <!-- endbuild -->
   <link rel="shortcut icon" type="image/ico" href="{{ theme:img src="favicon.ico" }}">
-    <script type="text/javascript"
+<!--     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCa3ywQ6GzCRIlFJsqT0_a1fBhaP7MoJpM">
-    </script>
+    </script> -->
 </head>
 <body>
 
@@ -18,7 +18,7 @@
       {{ layout_content }}
     </div>
     {{ theme:partial src="footer" }}
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<!--   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.min.js"></script> -->
   <!-- build:js -->
   <script src="{{ theme:js }}"></script>
