pre-call update

--- a/src/default.html
+++ b/src/default.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{{ _site_name }}</title>
+  <title>{{ title }} - {{ _site_name }}</title>
   <!-- build:css -->
   <link rel="stylesheet" href="{{ theme:css }}" />
   <!-- endbuild -->
   <link rel="shortcut icon" type="image/ico" href="{{ theme:img src="favicon.ico" }}">
-<!--     <script type="text/javascript"
+    <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCa3ywQ6GzCRIlFJsqT0_a1fBhaP7MoJpM">
-    </script> -->
+    </script>
 </head>
 <body>
 
