--- a/src/default.html
+++ b/src/default.html
@@ -11,7 +11,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCa3ywQ6GzCRIlFJsqT0_a1fBhaP7MoJpM">
     </script>
 </head>
-<body>
+<body data-spy="scroll" data-target="#secondary-nav">
 
     <div class="page-wrap">
       {{ theme:partial src="nav" }}
@@ -22,6 +22,17 @@
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.min.js"></script> -->
   <!-- build:js -->
   <script src="{{ theme:js }}"></script>
+  <script type="text/javascript">
+
+window.onload = function(){
+  var elements = document.getElementsByClassName("price-descriptor");
+  for (var i=0; i<elements.length; i++){
+    console.log(i);
+    elements[i].innerHTML = elements[i].innerHTML.replace(/\\b([a-z])([a-z]+)?\\b/gim, "<span class='first-letter'>$1</span>$2");
+  }
+}
+
+  </script>
   <!-- endbuild -->
 </body>
 </html>
