--- a/statamic/default.html
+++ b/statamic/default.html
@@ -30,6 +30,7 @@
 		{{ theme:partial src="footer" }}
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="{{ theme:js src="selectize.js" }}"></script>
 	<script src="{{ theme:js }}"></script>
 
 	</body>
