--- a/src/default.html
+++ b/src/default.html
@@ -10,6 +10,7 @@
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCa3ywQ6GzCRIlFJsqT0_a1fBhaP7MoJpM">
     </script>
+    <script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
 </head>
 <body data-spy="scroll" data-target="#scroll-spy-nav">
 
@@ -18,8 +19,7 @@
       {{ layout_content }}
     </div>
     {{ theme:partial src="footer" }}
-<!--   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.min.js"></script> -->
+
   <!-- build:js -->
   <script src="{{ theme:js }}"></script>
   <script type="text/javascript">
