--- a/src/default.html
+++ b/src/default.html
@@ -55,7 +55,7 @@ FB.init({
     js.async = true;js.src = "//connect.facebook.net/en_US/all" + (debug ? "/debug" : "") + ".js";
     ref.parentNode.insertBefore(js, ref);}(document, /*debug*/ false));
 function postToFeed(title, desc, url, image){
-var obj = {method: 'feed',link: url, picture: 'http://www.url.com/images/'+image,name: title,description: desc};
+var obj = {method: 'feed',link: url, picture: 'http://104.131.23.73'+image,name: title,description: desc};
 function callback(response){}
 FB.ui(obj, callback);
 }
