--- a/src/default.html
+++ b/src/default.html
@@ -47,7 +47,7 @@ function pinIt()
 <script type="text/javascript">
 window.fbAsyncInit = function(){
 FB.init({
-    appId: 'xxxxx', status: true, cookie: true, xfbml: true }); 
+    appId: '1637077719911107', status: true, cookie: true, xfbml: true }); 
 };
 (function(d, debug){var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
     if(d.getElementById(id)) {return;}
