--- a/src/default.html
+++ b/src/default.html
@@ -21,7 +21,26 @@
   <!-- build:css -->
   <link rel="stylesheet" href="{{ theme:css }}" />
   <!-- endbuild -->
-  <link rel="shortcut icon" type="image/ico" href="{{ theme:img src="favicon.ico" }}">
+  <link rel="shortcut icon" type="image/ico" href="{{ theme:img src="" }}">
+
+<link rel="apple-touch-icon" sizes="57x57" href="{{ theme:img src="/apple-touch-icon-57x57.png" }}">
+<link rel="apple-touch-icon" sizes="60x60" href="{{ theme:img src="/apple-touch-icon-60x60.png" }}">
+<link rel="apple-touch-icon" sizes="72x72" href="{{ theme:img src="/apple-touch-icon-72x72.png" }}">
+<link rel="apple-touch-icon" sizes="76x76" href="{{ theme:img src="/apple-touch-icon-76x76.png" }}">
+<link rel="apple-touch-icon" sizes="114x114" href="{{ theme:img src="/apple-touch-icon-114x114.png" }}">
+<link rel="apple-touch-icon" sizes="120x120" href="{{ theme:img src="/apple-touch-icon-120x120.png" }}">
+<link rel="apple-touch-icon" sizes="144x144" href="{{ theme:img src="/apple-touch-icon-144x144.png" }}">
+<link rel="apple-touch-icon" sizes="152x152" href="{{ theme:img src="/apple-touch-icon-152x152.png" }}">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ theme:img src="/apple-touch-icon-180x180.png" }}">
+<link rel="icon" type="image/png" href="{{ theme:img src="/favicon-32x32.png" sizes="32x32" }}">
+<link rel="icon" type="image/png" href="{{ theme:img src="/android-chrome-192x192.png" sizes="192x192" }}">
+<link rel="icon" type="image/png" href="{{ theme:img src="/favicon-96x96.png" sizes="96x96" }}">
+<link rel="icon" type="image/png" href="{{ theme:img src="/favicon-16x16.png" sizes="16x16" }}">
+<link rel="manifest" href="{{ theme:img src="/manifest.json" }}">
+<link rel="mask-icon" href="{{ theme:img src="/safari-pinned-tab.svg" color="#5bbad5" }}">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="{{ theme:img src="/mstile-144x144.png" }}">
+<meta name="theme-color" content="#ffffff">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
