--- a/src/default.html
+++ b/src/default.html
@@ -55,7 +55,7 @@
     {{ theme:partial src="footer" }}
 
   <!-- build:js -->
-  <script src="{{ theme:js }}"></script>
+  <script src="{{ theme:js src="main.min" }}"></script>
   <script type="text/javascript">
 
   window.onload = function(){
