--- a/src/default.html
+++ b/src/default.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <meta name="description" content="Leslie J. Garfield - NYC's premier broker for townhouses and small buildings.">
+  <meta name="description" content="Premium NYC townhouse and small building experts who enable clients to make smarter real estate decisions by providing accurate, timely information and insights.">
   <meta name="keywords" content="New York Real Estate, New York Townhouses">
   <meta name="geo.region" content="US-NY" />
   <meta name="geo.placename" content="New York City" />
