--- a/src/default.html
+++ b/src/default.html
@@ -19,7 +19,7 @@
   <meta property="og:country-name" content="USA" />
   <title>{{ title }} - {{ _site_name }}</title>
   <!-- build:css -->
-  <link rel="stylesheet" href="{{ theme:css }}" />
+  <link rel="stylesheet" href="{{ theme:css src="main.min" }}" />
   <!-- endbuild -->
   <link rel="shortcut icon" type="image/ico" href="{{ theme:img src="" }}">
 
