--- a/src/default.html
+++ b/src/default.html
@@ -52,10 +52,21 @@
       {{ theme:partial src="nav" }}
       {{ layout_content }}
     </div>
+
     {{ theme:partial src="footer" }}
 
   <!-- build:js -->
   <script src="{{ theme:js }}"></script>
   <!-- endbuild -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-70942725-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </body>
 </html>
