--- a/src/default.html
+++ b/src/default.html
@@ -1,15 +1,27 @@
 <!doctype html>
 <html>
 <head>
+  <title>{{ if !segment_1 }}{{ title }}{{ elseif segment_2 == "garfield" }}{{ title }} - New York City Townhouse Real Estate Agent{{ elseif segment_1 == "neighborhoods" }}{{ title }} - New York City Townhouse Real Estate - Leslie J. Garfield &amp; Co.{{ else }}{{ title }}{{ endif }}</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <meta name="description" content="Premium NYC townhouse and small building experts who enable clients to make smarter real estate decisions by providing accurate, timely information and insights.">
   <meta name="keywords" content="New York Real Estate, New York Townhouses">
   <meta name="geo.region" content="US-NY" />
   <meta name="geo.placename" content="New York City" />
   <meta name="geo.position" content="41.884013;-74.320194" />
   <meta name="ICBM" content="40.7628871, -73.9714047" />
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-TileImage" content="{{ theme:img src="/mstile-144x144.png" }}">
+  <meta name="theme-color" content="#ffffff">
+  {{ if segment_2 =="garfield" }}
+  <meta name="description" content="{{ title }} - {{ info|truncate:160|striptags }}">
+  {{ elseif segment_2 =="new-york" || segment_2 == "international" }}
+  <meta name="description" content="{{ summary_intro|truncate:160|striptags }}">
+  {{ elseif segment_1 =="neighborhoods" && segment_2 }}
+  <meta name="description" content="{{ description|truncate:160|striptags }}">
+  {{ else }}
+  <meta name="description" content="Premium NYC townhouse and small building experts who enable clients to make smarter real estate decisions by providing accurate, timely information and insights.">
+  {{ endif }}
   <meta property="og:latitude" content="40.7628871" />
   <meta property="og:longitude" content="-73.9714047" />
   <meta property="og:street-address" content="505 Park Ave #303" />
@@ -17,36 +29,33 @@
   <meta property="og:region" content="NY" />
   <meta property="og:postal-code" content="10022" />
   <meta property="og:country-name" content="USA" />
-  <title>{{ title }} - {{ _site_name }}</title>
+
   <!-- build:css -->
   <link rel="stylesheet" href="{{ theme:css }}" />
   <!-- endbuild -->
   <link rel="shortcut icon" type="image/ico" href="{{ theme:img src="" }}">
 
-<link rel="apple-touch-icon" sizes="57x57" href="{{ theme:img src="/apple-touch-icon-57x57.png" }}">
-<link rel="apple-touch-icon" sizes="60x60" href="{{ theme:img src="/apple-touch-icon-60x60.png" }}">
-<link rel="apple-touch-icon" sizes="72x72" href="{{ theme:img src="/apple-touch-icon-72x72.png" }}">
-<link rel="apple-touch-icon" sizes="76x76" href="{{ theme:img src="/apple-touch-icon-76x76.png" }}">
-<link rel="apple-touch-icon" sizes="114x114" href="{{ theme:img src="/apple-touch-icon-114x114.png" }}">
-<link rel="apple-touch-icon" sizes="120x120" href="{{ theme:img src="/apple-touch-icon-120x120.png" }}">
-<link rel="apple-touch-icon" sizes="144x144" href="{{ theme:img src="/apple-touch-icon-144x144.png" }}">
-<link rel="apple-touch-icon" sizes="152x152" href="{{ theme:img src="/apple-touch-icon-152x152.png" }}">
-<link rel="apple-touch-icon" sizes="180x180" href="{{ theme:img src="/apple-touch-icon-180x180.png" }}">
-<link rel="icon" type="image/png" href="{{ theme:img src="/favicon-32x32.png" sizes="32x32" }}">
-<link rel="icon" type="image/png" href="{{ theme:img src="/android-chrome-192x192.png" sizes="192x192" }}">
-<link rel="icon" type="image/png" href="{{ theme:img src="/favicon-96x96.png" sizes="96x96" }}">
-<link rel="icon" type="image/png" href="{{ theme:img src="/favicon-16x16.png" sizes="16x16" }}">
-<link rel="manifest" href="{{ theme:img src="/manifest.json" }}">
-<link rel="mask-icon" href="{{ theme:img src="/safari-pinned-tab.svg" color="#5bbad5" }}">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-TileImage" content="{{ theme:img src="/mstile-144x144.png" }}">
-<meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="57x57" href="{{ theme:img src="/apple-touch-icon-57x57.png" }}">
+  <link rel="apple-touch-icon" sizes="60x60" href="{{ theme:img src="/apple-touch-icon-60x60.png" }}">
+  <link rel="apple-touch-icon" sizes="72x72" href="{{ theme:img src="/apple-touch-icon-72x72.png" }}">
+  <link rel="apple-touch-icon" sizes="76x76" href="{{ theme:img src="/apple-touch-icon-76x76.png" }}">
+  <link rel="apple-touch-icon" sizes="114x114" href="{{ theme:img src="/apple-touch-icon-114x114.png" }}">
+  <link rel="apple-touch-icon" sizes="120x120" href="{{ theme:img src="/apple-touch-icon-120x120.png" }}">
+  <link rel="apple-touch-icon" sizes="144x144" href="{{ theme:img src="/apple-touch-icon-144x144.png" }}">
+  <link rel="apple-touch-icon" sizes="152x152" href="{{ theme:img src="/apple-touch-icon-152x152.png" }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ theme:img src="/apple-touch-icon-180x180.png" }}">
+  <link rel="icon" type="image/png" href="{{ theme:img src="/favicon-32x32.png" sizes="32x32" }}">
+  <link rel="icon" type="image/png" href="{{ theme:img src="/android-chrome-192x192.png" sizes="192x192" }}">
+  <link rel="icon" type="image/png" href="{{ theme:img src="/favicon-96x96.png" sizes="96x96" }}">
+  <link rel="icon" type="image/png" href="{{ theme:img src="/favicon-16x16.png" sizes="16x16" }}">
+  <link rel="manifest" href="{{ theme:img src="/manifest.json" }}">
+  <link rel="mask-icon" href="{{ theme:img src="/safari-pinned-tab.svg" color="#5bbad5" }}">
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
 
 </head>
-<body data-spy="scroll" data-target="#scroll-spy-nav">
+<body itemscope itemtype="http://schema.org/WebPage" data-spy="scroll" data-target="#scroll-spy-nav">
 
     <div class="page-wrap">
       {{ theme:partial src="nav" }}
