--- a/src/default.html
+++ b/src/default.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>{{ if !segment_1 }}{{ title }}{{ elseif segment_2 == "garfield" }}{{ title }} - New York City Townhouse Real Estate Agent{{ elseif segment_1 == "neighborhoods" }}{{ title }} - New York City Townhouse Real Estate - Leslie J. Garfield &amp; Co.{{ else }}{{ title }}{{ endif }}</title>
+  <title>{{ if !segment_1 }}{{ _site_name }}{{ elseif segment_2 == "garfield" }}{{ title }} - New York City Townhouse Real Estate Agent{{ elseif segment_1 == "neighborhoods" }}{{ title }} - New York City Townhouse Real Estate - Leslie J. Garfield &amp; Co.{{ else }}{{ title }}{{ endif }}</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
