revert footer for testing

--- a/src/default.html
+++ b/src/default.html
@@ -98,7 +98,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
 
     {{ theme:partial src="footer" }}
-    {{ theme:partial src="email_popup" }}
+    <!-- {{ theme:partial src="email_popup" }} -->
   <!-- build:js -->
   <script src="{{ theme:js }}"></script>
   <!-- endbuild -->
