--- a/src/default.html
+++ b/src/default.html
@@ -92,13 +92,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 {{ elseif segment_2 == "viewproperty" }}
 {{ redirect url="{{ homepage }}properties/new-york" }}
 {{ endif }}
-    <div class="page-wrap">
+
+    <div class="page-wrap {{ if segment_1 === "email" }}light-gray-bg{{ endif }}">
       {{ theme:partial src="nav" }}
       {{ layout_content }}
     </div>
-
+    {{ if segment_1 !== "email" }}
+      {{ theme:partial src="email_footer" }}
+    {{ endif }}
     {{ theme:partial src="footer" }}
+    {{ if !segment_1 }}
     {{ theme:partial src="email_popup" }}
+    {{ endif }}
   <!-- build:js -->
   <script src="{{ theme:js }}"></script>
   <!-- endbuild -->
